Add layer grid cell width/height and row/col examples to docs

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -957,12 +957,112 @@ image::layer_erase.png[]
 ==== Grid Row / Column
 
 include::commands/layer_grid_rowcol_description.txt[]
+
+include::output/layer_grid_rowcol_1_command.txt[]
+
 include::commands/layer_grid_rowcol.txt[]
+
+include::output/layer_grid_rowcol_0_command.txt[]
+include::output/layer_grid_rowcol_0_result.txt[]
+
+include::output/layer_grid_rowcol_1_command.txt[]
+include::output/layer_grid_rowcol_1_result.txt[]
+
+include::output/layer_grid_rowcol_2_command.txt[]
+include::output/layer_grid_rowcol_2_result.txt[]
+
+include::output/layer_grid_rowcol_3_command.txt[]
+include::output/layer_grid_rowcol_3_result.txt[]
+
+include::output/layer_grid_rowcol_4_command.txt[]
+include::output/layer_grid_rowcol_4_result.txt[]
+
+include::output/layer_grid_rowcol_5_command.txt[]
+include::output/layer_grid_rowcol_5_result.txt[]
+
+include::output/layer_grid_rowcol_6_command.txt[]
+include::output/layer_grid_rowcol_6_result.txt[]
+
+include::output/layer_grid_rowcol_7_command.txt[]
+include::output/layer_grid_rowcol_7_result.txt[]
+
+include::output/layer_grid_rowcol_8_command.txt[]
+include::output/layer_grid_rowcol_8_result.txt[]
+
+include::output/layer_grid_rowcol_9_command.txt[]
+include::output/layer_grid_rowcol_9_result.txt[]
+
+include::output/layer_grid_rowcol_10_command.txt[]
+include::output/layer_grid_rowcol_10_result.txt[]
+
+include::output/layer_grid_rowcol_11_command.txt[]
+include::output/layer_grid_rowcol_11_result.txt[]
+
+include::output/layer_grid_rowcol_12_command.txt[]
+include::output/layer_grid_rowcol_12_result.txt[]
+
+include::output/layer_grid_rowcol_13_command.txt[]
+include::output/layer_grid_rowcol_13_result.txt[]
+
+include::output/layer_grid_rowcol_14_command.txt[]
+include::output/layer_grid_rowcol_14_result.txt[]
+
+image::layer_grid_rowcol.png[]
 
 ==== Grid Width / Height
 
 include::commands/layer_grid_widthheight_description.txt[]
+
+include::output/layer_grid_widthheight_1_command.txt[]
+
 include::commands/layer_grid_widthheight.txt[]
+
+include::output/layer_grid_widthheight_0_command.txt[]
+include::output/layer_grid_widthheight_0_result.txt[]
+
+include::output/layer_grid_widthheight_1_command.txt[]
+include::output/layer_grid_widthheight_1_result.txt[]
+
+include::output/layer_grid_widthheight_2_command.txt[]
+include::output/layer_grid_widthheight_2_result.txt[]
+
+include::output/layer_grid_widthheight_3_command.txt[]
+include::output/layer_grid_widthheight_3_result.txt[]
+
+include::output/layer_grid_widthheight_4_command.txt[]
+include::output/layer_grid_widthheight_4_result.txt[]
+
+include::output/layer_grid_widthheight_5_command.txt[]
+include::output/layer_grid_widthheight_5_result.txt[]
+
+include::output/layer_grid_widthheight_6_command.txt[]
+include::output/layer_grid_widthheight_6_result.txt[]
+
+include::output/layer_grid_widthheight_7_command.txt[]
+include::output/layer_grid_widthheight_7_result.txt[]
+
+include::output/layer_grid_widthheight_8_command.txt[]
+include::output/layer_grid_widthheight_8_result.txt[]
+
+include::output/layer_grid_widthheight_9_command.txt[]
+include::output/layer_grid_widthheight_9_result.txt[]
+
+include::output/layer_grid_widthheight_10_command.txt[]
+include::output/layer_grid_widthheight_10_result.txt[]
+
+include::output/layer_grid_widthheight_11_command.txt[]
+include::output/layer_grid_widthheight_11_result.txt[]
+
+include::output/layer_grid_widthheight_12_command.txt[]
+include::output/layer_grid_widthheight_12_result.txt[]
+
+include::output/layer_grid_widthheight_13_command.txt[]
+include::output/layer_grid_widthheight_13_result.txt[]
+
+include::output/layer_grid_widthheight_14_command.txt[]
+include::output/layer_grid_widthheight_14_result.txt[]
+
+image::layer_grid_widthheight.png[]
 
 ==== Identity
 
