--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -1519,7 +1519,73 @@ image::layer_octagonalenvelopes.png[]
 ==== Points Along Lines
 
 include::commands/layer_points_along_lines_description.txt[]
+
+include::output/layer_points_along_lines_6_command.txt[]
+
 include::commands/layer_points_along_lines.txt[]
+
+include::output/layer_points_along_lines_0_command.txt[]
+include::output/layer_points_along_lines_0_result.txt[]
+
+include::output/layer_points_along_lines_1_command.txt[]
+include::output/layer_points_along_lines_1_result.txt[]
+
+include::output/layer_points_along_lines_2_command.txt[]
+include::output/layer_points_along_lines_2_result.txt[]
+
+include::output/layer_points_along_lines_3_command.txt[]
+include::output/layer_points_along_lines_3_result.txt[]
+
+include::output/layer_points_along_lines_4_command.txt[]
+include::output/layer_points_along_lines_4_result.txt[]
+
+include::output/layer_points_along_lines_5_command.txt[]
+include::output/layer_points_along_lines_5_result.txt[]
+
+include::output/layer_points_along_lines_6_command.txt[]
+include::output/layer_points_along_lines_6_result.txt[]
+
+include::output/layer_points_along_lines_7_command.txt[]
+include::output/layer_points_along_lines_7_result.txt[]
+
+include::output/layer_points_along_lines_8_command.txt[]
+include::output/layer_points_along_lines_8_result.txt[]
+
+include::output/layer_points_along_lines_9_command.txt[]
+include::output/layer_points_along_lines_9_result.txt[]
+
+include::output/layer_points_along_lines_10_command.txt[]
+include::output/layer_points_along_lines_10_result.txt[]
+
+include::output/layer_points_along_lines_11_command.txt[]
+include::output/layer_points_along_lines_11_result.txt[]
+
+include::output/layer_points_along_lines_12_command.txt[]
+include::output/layer_points_along_lines_12_result.txt[]
+
+include::output/layer_points_along_lines_13_command.txt[]
+include::output/layer_points_along_lines_13_result.txt[]
+
+include::output/layer_points_along_lines_14_command.txt[]
+include::output/layer_points_along_lines_14_result.txt[]
+
+include::output/layer_points_along_lines_15_command.txt[]
+include::output/layer_points_along_lines_15_result.txt[]
+
+include::output/layer_points_along_lines_16_command.txt[]
+include::output/layer_points_along_lines_16_result.txt[]
+
+include::output/layer_points_along_lines_17_command.txt[]
+include::output/layer_points_along_lines_17_result.txt[]
+
+include::output/layer_points_along_lines_18_command.txt[]
+include::output/layer_points_along_lines_18_result.txt[]
+
+include::output/layer_points_along_lines_19_command.txt[]
+include::output/layer_points_along_lines_19_result.txt[]
+
+image::layer_points_along_lines.png[]
+
 
 ==== Simplify
 
