Add layer simplify example to docs

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -1590,7 +1590,78 @@ image::layer_points_along_lines.png[]
 ==== Simplify
 
 include::commands/layer_simplify_description.txt[]
+
+include::output/layer_simplify_4_command.txt[]
+
 include::commands/layer_simplify.txt[]
+
+include::output/layer_simplify_0_command.txt[]
+include::output/layer_simplify_0_result.txt[]
+
+include::output/layer_simplify_1_command.txt[]
+include::output/layer_simplify_1_result.txt[]
+
+include::output/layer_simplify_2_command.txt[]
+include::output/layer_simplify_2_result.txt[]
+
+include::output/layer_simplify_3_command.txt[]
+include::output/layer_simplify_3_result.txt[]
+
+include::output/layer_simplify_4_command.txt[]
+include::output/layer_simplify_4_result.txt[]
+
+include::output/layer_simplify_5_command.txt[]
+include::output/layer_simplify_5_result.txt[]
+
+include::output/layer_simplify_6_command.txt[]
+include::output/layer_simplify_6_result.txt[]
+
+include::output/layer_simplify_7_command.txt[]
+include::output/layer_simplify_7_result.txt[]
+
+include::output/layer_simplify_8_command.txt[]
+include::output/layer_simplify_8_result.txt[]
+
+include::output/layer_simplify_9_command.txt[]
+include::output/layer_simplify_9_result.txt[]
+
+include::output/layer_simplify_10_command.txt[]
+include::output/layer_simplify_10_result.txt[]
+
+include::output/layer_simplify_11_command.txt[]
+include::output/layer_simplify_11_result.txt[]
+
+include::output/layer_simplify_12_command.txt[]
+include::output/layer_simplify_12_result.txt[]
+
+include::output/layer_simplify_13_command.txt[]
+include::output/layer_simplify_13_result.txt[]
+
+include::output/layer_simplify_14_command.txt[]
+include::output/layer_simplify_14_result.txt[]
+
+include::output/layer_simplify_15_command.txt[]
+include::output/layer_simplify_15_result.txt[]
+
+include::output/layer_simplify_16_command.txt[]
+include::output/layer_simplify_16_result.txt[]
+
+include::output/layer_simplify_17_command.txt[]
+include::output/layer_simplify_17_result.txt[]
+
+include::output/layer_simplify_18_command.txt[]
+include::output/layer_simplify_18_result.txt[]
+
+include::output/layer_simplify_19_command.txt[]
+include::output/layer_simplify_19_result.txt[]
+
+include::output/layer_simplify_20_command.txt[]
+include::output/layer_simplify_20_result.txt[]
+
+include::output/layer_simplify_21_command.txt[]
+include::output/layer_simplify_21_result.txt[]
+
+image::layer_simplify.png[]
 
 ==== Symmetric Difference
 
