--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -1727,7 +1727,69 @@ image::layer_symdifference.png[]
 ==== Transform
 
 include::commands/layer_transform_description.txt[]
+
+include::output/layer_transform_4_command.txt[]
+
 include::commands/layer_transform.txt[]
+
+include::output/layer_transform_0_command.txt[]
+include::output/layer_transform_0_result.txt[]
+
+include::output/layer_transform_1_command.txt[]
+include::output/layer_transform_1_result.txt[]
+
+include::output/layer_transform_2_command.txt[]
+include::output/layer_transform_2_result.txt[]
+
+include::output/layer_transform_3_command.txt[]
+include::output/layer_transform_3_result.txt[]
+
+include::output/layer_transform_4_command.txt[]
+include::output/layer_transform_4_result.txt[]
+
+include::output/layer_transform_5_command.txt[]
+include::output/layer_transform_5_result.txt[]
+
+include::output/layer_transform_6_command.txt[]
+include::output/layer_transform_6_result.txt[]
+
+include::output/layer_transform_7_command.txt[]
+include::output/layer_transform_7_result.txt[]
+
+include::output/layer_transform_8_command.txt[]
+include::output/layer_transform_8_result.txt[]
+
+include::output/layer_transform_9_command.txt[]
+include::output/layer_transform_9_result.txt[]
+
+include::output/layer_transform_10_command.txt[]
+include::output/layer_transform_10_result.txt[]
+
+include::output/layer_transform_11_command.txt[]
+include::output/layer_transform_11_result.txt[]
+
+include::output/layer_transform_12_command.txt[]
+include::output/layer_transform_12_result.txt[]
+
+include::output/layer_transform_13_command.txt[]
+include::output/layer_transform_13_result.txt[]
+
+include::output/layer_transform_14_command.txt[]
+include::output/layer_transform_14_result.txt[]
+
+include::output/layer_transform_15_command.txt[]
+include::output/layer_transform_15_result.txt[]
+
+include::output/layer_transform_16_command.txt[]
+include::output/layer_transform_16_result.txt[]
+
+include::output/layer_transform_17_command.txt[]
+include::output/layer_transform_17_result.txt[]
+
+include::output/layer_transform_18_command.txt[]
+include::output/layer_transform_18_result.txt[]
+
+image::layer_transform.png[]
 
 ==== Union
 
