Add raster algebra example to docs for adding two rasters together.

--- a/src/main/docs/raster.adoc
+++ b/src/main/docs/raster.adoc
@@ -234,7 +234,128 @@ image::raster_style_set.png[]
 === Add Raster
 
 include::commands/raster_add_raster_description.txt[]
+
+include::output/raster_add_raster_25_command.txt[]
+
 include::commands/raster_add_raster.txt[]
+
+include::output/raster_add_raster_0_command.txt[]
+include::output/raster_add_raster_0_result.txt[]
+
+include::output/raster_add_raster_1_command.txt[]
+include::output/raster_add_raster_1_result.txt[]
+
+include::output/raster_add_raster_2_command.txt[]
+include::output/raster_add_raster_2_result.txt[]
+
+include::output/raster_add_raster_3_command.txt[]
+include::output/raster_add_raster_3_result.txt[]
+
+include::output/raster_add_raster_4_command.txt[]
+include::output/raster_add_raster_4_result.txt[]
+
+include::output/raster_add_raster_5_command.txt[]
+include::output/raster_add_raster_5_result.txt[]
+
+include::output/raster_add_raster_6_command.txt[]
+include::output/raster_add_raster_6_result.txt[]
+
+include::output/raster_add_raster_7_command.txt[]
+include::output/raster_add_raster_7_result.txt[]
+
+include::output/raster_add_raster_8_command.txt[]
+include::output/raster_add_raster_8_result.txt[]
+
+include::output/raster_add_raster_9_command.txt[]
+include::output/raster_add_raster_9_result.txt[]
+
+
+include::output/raster_add_raster_10_command.txt[]
+include::output/raster_add_raster_10_result.txt[]
+
+include::output/raster_add_raster_11_command.txt[]
+include::output/raster_add_raster_11_result.txt[]
+
+include::output/raster_add_raster_12_command.txt[]
+include::output/raster_add_raster_12_result.txt[]
+
+image::raster_add_raster_high.png[]
+
+include::output/raster_add_raster_13_command.txt[]
+include::output/raster_add_raster_13_result.txt[]
+
+include::output/raster_add_raster_14_command.txt[]
+include::output/raster_add_raster_14_result.txt[]
+
+include::output/raster_add_raster_15_command.txt[]
+include::output/raster_add_raster_15_result.txt[]
+
+include::output/raster_add_raster_16_command.txt[]
+include::output/raster_add_raster_16_result.txt[]
+
+include::output/raster_add_raster_17_command.txt[]
+include::output/raster_add_raster_17_result.txt[]
+
+include::output/raster_add_raster_18_command.txt[]
+include::output/raster_add_raster_18_result.txt[]
+
+include::output/raster_add_raster_19_command.txt[]
+include::output/raster_add_raster_19_result.txt[]
+
+include::output/raster_add_raster_20_command.txt[]
+include::output/raster_add_raster_20_result.txt[]
+
+include::output/raster_add_raster_21_command.txt[]
+include::output/raster_add_raster_21_result.txt[]
+
+include::output/raster_add_raster_22_command.txt[]
+include::output/raster_add_raster_22_result.txt[]
+
+include::output/raster_add_raster_23_command.txt[]
+include::output/raster_add_raster_23_result.txt[]
+
+image::raster_add_raster_low.png[]
+
+include::output/raster_add_raster_24_command.txt[]
+include::output/raster_add_raster_24_result.txt[]
+
+include::output/raster_add_raster_25_command.txt[]
+include::output/raster_add_raster_25_result.txt[]
+
+include::output/raster_add_raster_26_command.txt[]
+include::output/raster_add_raster_26_result.txt[]
+
+include::output/raster_add_raster_27_command.txt[]
+include::output/raster_add_raster_27_result.txt[]
+
+include::output/raster_add_raster_28_command.txt[]
+include::output/raster_add_raster_28_result.txt[]
+
+include::output/raster_add_raster_29_command.txt[]
+include::output/raster_add_raster_29_result.txt[]
+
+include::output/raster_add_raster_30_command.txt[]
+include::output/raster_add_raster_30_result.txt[]
+
+include::output/raster_add_raster_31_command.txt[]
+include::output/raster_add_raster_31_result.txt[]
+
+include::output/raster_add_raster_32_command.txt[]
+include::output/raster_add_raster_32_result.txt[]
+
+include::output/raster_add_raster_33_command.txt[]
+include::output/raster_add_raster_33_result.txt[]
+
+include::output/raster_add_raster_34_command.txt[]
+include::output/raster_add_raster_34_result.txt[]
+
+include::output/raster_add_raster_35_command.txt[]
+include::output/raster_add_raster_35_result.txt[]
+
+include::output/raster_add_raster_36_command.txt[]
+include::output/raster_add_raster_36_result.txt[]
+
+image::raster_add_raster_add.png[]
 
 === Add Constant
 
