--- a/src/main/docs/raster.adoc
+++ b/src/main/docs/raster.adoc
@@ -406,7 +406,124 @@ image::raster_add_constant.png[]
 === Subtract Raster
 
 include::commands/raster_subtract_raster_description.txt[]
+
+include::output/raster_subtract_raster_25_command.txt[]
+
 include::commands/raster_subtract_raster.txt[]
+
+include::output/raster_subtract_raster_0_command.txt[]
+include::output/raster_subtract_raster_0_result.txt[]
+
+include::output/raster_subtract_raster_1_command.txt[]
+include::output/raster_subtract_raster_1_result.txt[]
+
+include::output/raster_subtract_raster_2_command.txt[]
+include::output/raster_subtract_raster_2_result.txt[]
+
+include::output/raster_subtract_raster_3_command.txt[]
+include::output/raster_subtract_raster_3_result.txt[]
+
+include::output/raster_subtract_raster_4_command.txt[]
+include::output/raster_subtract_raster_4_result.txt[]
+
+include::output/raster_subtract_raster_5_command.txt[]
+include::output/raster_subtract_raster_5_result.txt[]
+
+include::output/raster_subtract_raster_6_command.txt[]
+include::output/raster_subtract_raster_6_result.txt[]
+
+include::output/raster_subtract_raster_7_command.txt[]
+include::output/raster_subtract_raster_7_result.txt[]
+
+include::output/raster_subtract_raster_8_command.txt[]
+include::output/raster_subtract_raster_8_result.txt[]
+
+include::output/raster_subtract_raster_9_command.txt[]
+include::output/raster_subtract_raster_9_result.txt[]
+
+include::output/raster_subtract_raster_10_command.txt[]
+include::output/raster_subtract_raster_10_result.txt[]
+
+include::output/raster_subtract_raster_11_command.txt[]
+include::output/raster_subtract_raster_11_result.txt[]
+
+include::output/raster_subtract_raster_12_command.txt[]
+include::output/raster_subtract_raster_12_result.txt[]
+
+image::raster_subtract_raster_high.png[]
+
+include::output/raster_subtract_raster_13_command.txt[]
+include::output/raster_subtract_raster_13_result.txt[]
+
+include::output/raster_subtract_raster_14_command.txt[]
+include::output/raster_subtract_raster_14_result.txt[]
+
+include::output/raster_subtract_raster_15_command.txt[]
+include::output/raster_subtract_raster_15_result.txt[]
+
+include::output/raster_subtract_raster_16_command.txt[]
+include::output/raster_subtract_raster_16_result.txt[]
+
+include::output/raster_subtract_raster_17_command.txt[]
+include::output/raster_subtract_raster_17_result.txt[]
+
+include::output/raster_subtract_raster_18_command.txt[]
+include::output/raster_subtract_raster_18_result.txt[]
+
+include::output/raster_subtract_raster_19_command.txt[]
+include::output/raster_subtract_raster_19_result.txt[]
+
+include::output/raster_subtract_raster_20_command.txt[]
+include::output/raster_subtract_raster_20_result.txt[]
+
+include::output/raster_subtract_raster_21_command.txt[]
+include::output/raster_subtract_raster_21_result.txt[]
+
+include::output/raster_subtract_raster_22_command.txt[]
+include::output/raster_subtract_raster_22_result.txt[]
+
+include::output/raster_subtract_raster_23_command.txt[]
+include::output/raster_subtract_raster_23_result.txt[]
+
+image::raster_subtract_raster_low.png[]
+
+include::output/raster_subtract_raster_24_command.txt[]
+include::output/raster_subtract_raster_24_result.txt[]
+
+include::output/raster_subtract_raster_25_command.txt[]
+include::output/raster_subtract_raster_25_result.txt[]
+
+include::output/raster_subtract_raster_26_command.txt[]
+include::output/raster_subtract_raster_26_result.txt[]
+
+include::output/raster_subtract_raster_27_command.txt[]
+include::output/raster_subtract_raster_27_result.txt[]
+
+include::output/raster_subtract_raster_28_command.txt[]
+include::output/raster_subtract_raster_28_result.txt[]
+
+include::output/raster_subtract_raster_29_command.txt[]
+include::output/raster_subtract_raster_29_result.txt[]
+
+include::output/raster_subtract_raster_30_command.txt[]
+include::output/raster_subtract_raster_30_result.txt[]
+
+include::output/raster_subtract_raster_31_command.txt[]
+include::output/raster_subtract_raster_31_result.txt[]
+
+include::output/raster_subtract_raster_32_command.txt[]
+include::output/raster_subtract_raster_32_result.txt[]
+
+include::output/raster_subtract_raster_33_command.txt[]
+include::output/raster_subtract_raster_33_result.txt[]
+
+include::output/raster_subtract_raster_34_command.txt[]
+include::output/raster_subtract_raster_34_result.txt[]
+
+include::output/raster_subtract_raster_35_command.txt[]
+include::output/raster_subtract_raster_35_result.txt[]
+
+image::raster_subtract_raster_subtract.png[]
 
 === Subtract Constant
 
@@ -457,7 +574,124 @@ image::raster_subtract_constant.png[]
 === Multiply Raster
 
 include::commands/raster_multiply_raster_description.txt[]
+
+include::output/raster_multiply_raster_25_command.txt[]
+
 include::commands/raster_multiply_raster.txt[]
+
+include::output/raster_multiply_raster_0_command.txt[]
+include::output/raster_multiply_raster_0_result.txt[]
+
+include::output/raster_multiply_raster_1_command.txt[]
+include::output/raster_multiply_raster_1_result.txt[]
+
+include::output/raster_multiply_raster_2_command.txt[]
+include::output/raster_multiply_raster_2_result.txt[]
+
+include::output/raster_multiply_raster_3_command.txt[]
+include::output/raster_multiply_raster_3_result.txt[]
+
+include::output/raster_multiply_raster_4_command.txt[]
+include::output/raster_multiply_raster_4_result.txt[]
+
+include::output/raster_multiply_raster_5_command.txt[]
+include::output/raster_multiply_raster_5_result.txt[]
+
+include::output/raster_multiply_raster_6_command.txt[]
+include::output/raster_multiply_raster_6_result.txt[]
+
+include::output/raster_multiply_raster_7_command.txt[]
+include::output/raster_multiply_raster_7_result.txt[]
+
+include::output/raster_multiply_raster_8_command.txt[]
+include::output/raster_multiply_raster_8_result.txt[]
+
+include::output/raster_multiply_raster_9_command.txt[]
+include::output/raster_multiply_raster_9_result.txt[]
+
+include::output/raster_multiply_raster_10_command.txt[]
+include::output/raster_multiply_raster_10_result.txt[]
+
+include::output/raster_multiply_raster_11_command.txt[]
+include::output/raster_multiply_raster_11_result.txt[]
+
+include::output/raster_multiply_raster_12_command.txt[]
+include::output/raster_multiply_raster_12_result.txt[]
+
+image::raster_multiply_raster_high.png[]
+
+include::output/raster_multiply_raster_13_command.txt[]
+include::output/raster_multiply_raster_13_result.txt[]
+
+include::output/raster_multiply_raster_14_command.txt[]
+include::output/raster_multiply_raster_14_result.txt[]
+
+include::output/raster_multiply_raster_15_command.txt[]
+include::output/raster_multiply_raster_15_result.txt[]
+
+include::output/raster_multiply_raster_16_command.txt[]
+include::output/raster_multiply_raster_16_result.txt[]
+
+include::output/raster_multiply_raster_17_command.txt[]
+include::output/raster_multiply_raster_17_result.txt[]
+
+include::output/raster_multiply_raster_18_command.txt[]
+include::output/raster_multiply_raster_18_result.txt[]
+
+include::output/raster_multiply_raster_19_command.txt[]
+include::output/raster_multiply_raster_19_result.txt[]
+
+include::output/raster_multiply_raster_20_command.txt[]
+include::output/raster_multiply_raster_20_result.txt[]
+
+include::output/raster_multiply_raster_21_command.txt[]
+include::output/raster_multiply_raster_21_result.txt[]
+
+include::output/raster_multiply_raster_22_command.txt[]
+include::output/raster_multiply_raster_22_result.txt[]
+
+include::output/raster_multiply_raster_23_command.txt[]
+include::output/raster_multiply_raster_23_result.txt[]
+
+image::raster_multiply_raster_low.png[]
+
+include::output/raster_multiply_raster_24_command.txt[]
+include::output/raster_multiply_raster_24_result.txt[]
+
+include::output/raster_multiply_raster_25_command.txt[]
+include::output/raster_multiply_raster_25_result.txt[]
+
+include::output/raster_multiply_raster_26_command.txt[]
+include::output/raster_multiply_raster_26_result.txt[]
+
+include::output/raster_multiply_raster_27_command.txt[]
+include::output/raster_multiply_raster_27_result.txt[]
+
+include::output/raster_multiply_raster_28_command.txt[]
+include::output/raster_multiply_raster_28_result.txt[]
+
+include::output/raster_multiply_raster_29_command.txt[]
+include::output/raster_multiply_raster_29_result.txt[]
+
+include::output/raster_multiply_raster_30_command.txt[]
+include::output/raster_multiply_raster_30_result.txt[]
+
+include::output/raster_multiply_raster_31_command.txt[]
+include::output/raster_multiply_raster_31_result.txt[]
+
+include::output/raster_multiply_raster_32_command.txt[]
+include::output/raster_multiply_raster_32_result.txt[]
+
+include::output/raster_multiply_raster_33_command.txt[]
+include::output/raster_multiply_raster_33_result.txt[]
+
+include::output/raster_multiply_raster_34_command.txt[]
+include::output/raster_multiply_raster_34_result.txt[]
+
+include::output/raster_multiply_raster_35_command.txt[]
+include::output/raster_multiply_raster_35_result.txt[]
+
+image::raster_multiply_raster_multiply.png[]
 
 === Multiply Constant
 
@@ -508,7 +742,124 @@ image::raster_multiply_constant.png[]
 === Divide Raster
 
 include::commands/raster_divide_raster_description.txt[]
+
+include::output/raster_divide_raster_25_command.txt[]
+
 include::commands/raster_divide_raster.txt[]
+
+include::output/raster_divide_raster_0_command.txt[]
+include::output/raster_divide_raster_0_result.txt[]
+
+include::output/raster_divide_raster_1_command.txt[]
+include::output/raster_divide_raster_1_result.txt[]
+
+include::output/raster_divide_raster_2_command.txt[]
+include::output/raster_divide_raster_2_result.txt[]
+
+include::output/raster_divide_raster_3_command.txt[]
+include::output/raster_divide_raster_3_result.txt[]
+
+include::output/raster_divide_raster_4_command.txt[]
+include::output/raster_divide_raster_4_result.txt[]
+
+include::output/raster_divide_raster_5_command.txt[]
+include::output/raster_divide_raster_5_result.txt[]
+
+include::output/raster_divide_raster_6_command.txt[]
+include::output/raster_divide_raster_6_result.txt[]
+
+include::output/raster_divide_raster_7_command.txt[]
+include::output/raster_divide_raster_7_result.txt[]
+
+include::output/raster_divide_raster_8_command.txt[]
+include::output/raster_divide_raster_8_result.txt[]
+
+include::output/raster_divide_raster_9_command.txt[]
+include::output/raster_divide_raster_9_result.txt[]
+
+include::output/raster_divide_raster_10_command.txt[]
+include::output/raster_divide_raster_10_result.txt[]
+
+include::output/raster_divide_raster_11_command.txt[]
+include::output/raster_divide_raster_11_result.txt[]
+
+include::output/raster_divide_raster_12_command.txt[]
+include::output/raster_divide_raster_12_result.txt[]
+
+image::raster_divide_raster_high.png[]
+
+include::output/raster_divide_raster_13_command.txt[]
+include::output/raster_divide_raster_13_result.txt[]
+
+include::output/raster_divide_raster_14_command.txt[]
+include::output/raster_divide_raster_14_result.txt[]
+
+include::output/raster_divide_raster_15_command.txt[]
+include::output/raster_divide_raster_15_result.txt[]
+
+include::output/raster_divide_raster_16_command.txt[]
+include::output/raster_divide_raster_16_result.txt[]
+
+include::output/raster_divide_raster_17_command.txt[]
+include::output/raster_divide_raster_17_result.txt[]
+
+include::output/raster_divide_raster_18_command.txt[]
+include::output/raster_divide_raster_18_result.txt[]
+
+include::output/raster_divide_raster_19_command.txt[]
+include::output/raster_divide_raster_19_result.txt[]
+
+include::output/raster_divide_raster_20_command.txt[]
+include::output/raster_divide_raster_20_result.txt[]
+
+include::output/raster_divide_raster_21_command.txt[]
+include::output/raster_divide_raster_21_result.txt[]
+
+include::output/raster_divide_raster_22_command.txt[]
+include::output/raster_divide_raster_22_result.txt[]
+
+include::output/raster_divide_raster_23_command.txt[]
+include::output/raster_divide_raster_23_result.txt[]
+
+image::raster_divide_raster_low.png[]
+
+include::output/raster_divide_raster_24_command.txt[]
+include::output/raster_divide_raster_24_result.txt[]
+
+include::output/raster_divide_raster_25_command.txt[]
+include::output/raster_divide_raster_25_result.txt[]
+
+include::output/raster_divide_raster_26_command.txt[]
+include::output/raster_divide_raster_26_result.txt[]
+
+include::output/raster_divide_raster_27_command.txt[]
+include::output/raster_divide_raster_27_result.txt[]
+
+include::output/raster_divide_raster_28_command.txt[]
+include::output/raster_divide_raster_28_result.txt[]
+
+include::output/raster_divide_raster_29_command.txt[]
+include::output/raster_divide_raster_29_result.txt[]
+
+include::output/raster_divide_raster_30_command.txt[]
+include::output/raster_divide_raster_30_result.txt[]
+
+include::output/raster_divide_raster_31_command.txt[]
+include::output/raster_divide_raster_31_result.txt[]
+
+include::output/raster_divide_raster_32_command.txt[]
+include::output/raster_divide_raster_32_result.txt[]
+
+include::output/raster_divide_raster_33_command.txt[]
+include::output/raster_divide_raster_33_result.txt[]
+
+include::output/raster_divide_raster_34_command.txt[]
+include::output/raster_divide_raster_34_result.txt[]
+
+include::output/raster_divide_raster_35_command.txt[]
+include::output/raster_divide_raster_35_result.txt[]
+
+image::raster_divide_raster_divide.png[]
 
 === Divide Constant
 
