--- a/src/main/docs/raster.adoc
+++ b/src/main/docs/raster.adoc
@@ -1067,7 +1067,36 @@ include::commands/raster_scale.txt[]
 === Shaded Relief
 
 include::commands/raster_shadedrelief_description.txt[]
+
+include::output/raster_shadedrelief_3_command.txt[]
+
 include::commands/raster_shadedrelief.txt[]
+
+include::output/raster_shadedrelief_0_command.txt[]
+include::output/raster_shadedrelief_0_result.txt[]
+
+include::output/raster_shadedrelief_1_command.txt[]
+include::output/raster_shadedrelief_1_result.txt[]
+
+include::output/raster_shadedrelief_2_command.txt[]
+include::output/raster_shadedrelief_2_result.txt[]
+
+include::output/raster_shadedrelief_3_command.txt[]
+include::output/raster_shadedrelief_3_result.txt[]
+
+include::output/raster_shadedrelief_4_command.txt[]
+include::output/raster_shadedrelief_4_result.txt[]
+
+include::output/raster_shadedrelief_5_command.txt[]
+include::output/raster_shadedrelief_5_result.txt[]
+
+include::output/raster_shadedrelief_6_command.txt[]
+include::output/raster_shadedrelief_6_result.txt[]
+
+include::output/raster_shadedrelief_7_command.txt[]
+include::output/raster_shadedrelief_7_result.txt[]
+
+image::raster_shadedrelief.png[]
 
 === Stylize
 
