--- a/src/main/docs/raster.adoc
+++ b/src/main/docs/raster.adoc
@@ -1062,7 +1062,36 @@ image::raster_reproject.png[]
 === Scale
 
 include::commands/raster_scale_description.txt[]
+
+include::output/raster_scale_3_command.txt[]
+
 include::commands/raster_scale.txt[]
+
+include::output/raster_scale_0_command.txt[]
+include::output/raster_scale_0_result.txt[]
+
+include::output/raster_scale_1_command.txt[]
+include::output/raster_scale_1_result.txt[]
+
+include::output/raster_scale_2_command.txt[]
+include::output/raster_scale_2_result.txt[]
+
+include::output/raster_scale_3_command.txt[]
+include::output/raster_scale_3_result.txt[]
+
+include::output/raster_scale_4_command.txt[]
+include::output/raster_scale_4_result.txt[]
+
+include::output/raster_scale_5_command.txt[]
+include::output/raster_scale_5_result.txt[]
+
+include::output/raster_scale_6_command.txt[]
+include::output/raster_scale_6_result.txt[]
+
+include::output/raster_scale_7_command.txt[]
+include::output/raster_scale_7_result.txt[]
+
+image::raster_scale.png[]
 
 === Shaded Relief
 
