--- a/src/main/docs/raster.adoc
+++ b/src/main/docs/raster.adoc
@@ -1126,6 +1126,12 @@ include::output/raster_scale_6_result.txt[]
 include::output/raster_scale_7_command.txt[]
 include::output/raster_scale_7_result.txt[]
 
+include::output/raster_scale_8_command.txt[]
+include::output/raster_scale_8_result.txt[]
+
+include::output/raster_scale_9_command.txt[]
+include::output/raster_scale_9_result.txt[]
+
 image::raster_scale.png[]
 
 === Shaded Relief
