--- a/src/main/docs/index.adoc
+++ b/src/main/docs/index.adoc
@@ -1,6 +1,7 @@
 = Geo Shell
 Jared Erickson
 v0.8.0
+:title-page:
 :title-logo-image: image:geoshell.png[pdfwidth=5.5in,align=center]
 ifndef::imagesdir[:imagesdir: images]
 
