Add style repository commands

--- a/src/main/docs/style.adoc
+++ b/src/main/docs/style.adoc
@@ -338,3 +338,126 @@ include::output/style_raster_palette_colormap.sld[]
 
 image::style_raster_palette_colormap.png[]
 
+=== Style Repository Save
+
+include::commands/style_repository_save_description.txt[]
+
+include::output/style_repository_save_1_command.txt[]
+
+include::commands/style_repository_save.txt[]
+
+include::output/style_repository_save_0_command.txt[]
+include::output/style_repository_save_0_result.txt[]
+
+include::output/style_repository_save_1_command.txt[]
+include::output/style_repository_save_1_result.txt[]
+
+=== Style Repository List
+
+include::commands/style_repository_list_description.txt[]
+
+include::output/style_repository_list_4_command.txt[]
+
+include::commands/style_repository_list.txt[]
+
+include::output/style_repository_list_0_command.txt[]
+include::output/style_repository_list_0_result.txt[]
+
+include::output/style_repository_list_1_command.txt[]
+include::output/style_repository_list_1_result.txt[]
+
+include::output/style_repository_list_2_command.txt[]
+include::output/style_repository_list_2_result.txt[]
+
+include::output/style_repository_list_3_command.txt[]
+include::output/style_repository_list_3_result.txt[]
+
+include::output/style_repository_list_4_command.txt[]
+include::output/style_repository_list_4_result.txt[]
+
+include::output/style_repository_list_5_command.txt[]
+include::output/style_repository_list_5_result.txt[]
+
+=== Style Repository Delete
+
+include::commands/style_repository_delete_description.txt[]
+
+include::output/style_repository_delete_5_command.txt[]
+
+include::commands/style_repository_delete.txt[]
+
+include::output/style_repository_delete_0_command.txt[]
+include::output/style_repository_delete_0_result.txt[]
+
+include::output/style_repository_delete_1_command.txt[]
+include::output/style_repository_delete_1_result.txt[]
+
+include::output/style_repository_delete_2_command.txt[]
+include::output/style_repository_delete_2_result.txt[]
+
+include::output/style_repository_delete_3_command.txt[]
+include::output/style_repository_delete_3_result.txt[]
+
+include::output/style_repository_delete_4_command.txt[]
+include::output/style_repository_delete_4_result.txt[]
+
+include::output/style_repository_delete_5_command.txt[]
+include::output/style_repository_delete_5_result.txt[]
+
+include::output/style_repository_delete_6_command.txt[]
+include::output/style_repository_delete_6_result.txt[]
+
+=== Style Repository Get
+
+include::commands/style_repository_get_description.txt[]
+
+include::output/style_repository_get_4_command.txt[]
+
+include::commands/style_repository_get.txt[]
+
+include::output/style_repository_get_0_command.txt[]
+include::output/style_repository_get_0_result.txt[]
+
+include::output/style_repository_get_1_command.txt[]
+include::output/style_repository_get_1_result.txt[]
+
+include::output/style_repository_get_2_command.txt[]
+include::output/style_repository_get_2_result.txt[]
+
+include::output/style_repository_get_3_command.txt[]
+include::output/style_repository_get_3_result.txt[]
+
+include::output/style_repository_get_4_command.txt[]
+include::output/style_repository_get_4_result.txt[]
+
+include::output/style_repository_get_5_command.txt[]
+include::output/style_repository_get_5_result.txt[]
+
+=== Style Repository Copy
+
+include::commands/style_repository_copy_description.txt[]
+
+include::output/style_repository_copy_5_command.txt[]
+
+include::commands/style_repository_copy.txt[]
+
+include::output/style_repository_copy_0_command.txt[]
+include::output/style_repository_copy_0_result.txt[]
+
+include::output/style_repository_copy_1_command.txt[]
+include::output/style_repository_copy_1_result.txt[]
+
+include::output/style_repository_copy_2_command.txt[]
+include::output/style_repository_copy_2_result.txt[]
+
+include::output/style_repository_copy_3_command.txt[]
+include::output/style_repository_copy_3_result.txt[]
+
+include::output/style_repository_copy_4_command.txt[]
+include::output/style_repository_copy_4_result.txt[]
+
+include::output/style_repository_copy_5_command.txt[]
+include::output/style_repository_copy_5_result.txt[]
+
+include::output/style_repository_copy_6_command.txt[]
+include::output/style_repository_copy_6_result.txt[]
