--- a/src/main/docs/index.adoc
+++ b/src/main/docs/index.adoc
@@ -1,6 +1,6 @@
 = Geo Shell
 Jared Erickson
-v0.10.0
+v0.11-SNAPSHOT
 :title-page:
 :title-logo-image: image:geoshell.png[pdfwidth=5.5in,align=center]
 ifndef::imagesdir[:imagesdir: images]
